@@ -2,7 +2,6 @@ plugins {
 	id 'org.springframework.boot' version '3.1.5'
 	id 'io.spring.dependency-management' version '1.1.3'
 	id 'java'
-	id 'org.graalvm.buildtools.native' version '0.9.28'
 }
 
 group = 'com.shukap'
@@ -14,13 +13,6 @@ java {
 	}
 }
 
-graalvmNative {
-	binaries {
-		main {
-			buildArgs.add('--enable-preview')
-		}
-	}
-}
 repositories {
 	mavenCentral()
 }
